--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,12 @@
     tools:context=".MainActivity"
     android:background="#F8F5F5"
     android:fitsSystemWindows="true"
-    tools:openDrawer="end">
+    >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
     <com.google.android.material.appbar.AppBarLayout
@@ -39,23 +43,21 @@
     </com.google.android.material.appbar.AppBarLayout>
 
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/container"
-        android:background="#fff"
-        android:layout_below="@id/bar_layout"
-        android:layout_above="@id/bar_layout"
-        >
+        <FrameLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/real_layout"
+            android:layout_below="@id/bar_layout">
 
-    </FrameLayout>
+        </FrameLayout>
 
     <LinearLayout
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:gravity="bottom"
+        android:layout_gravity="bottom"
         android:id="@+id/real_layout"
         android:orientation="horizontal"
         android:weightSum="4"
@@ -98,8 +100,8 @@
             android:layout_height="wrap_content"
             android:background="@drawable/ic_person_outline_black_24dp"
             />
-
     </LinearLayout>
+    </RelativeLayout>
 
 
 
