--- a/app/src/main/res/layout/fragment_article.xml
+++ b/app/src/main/res/layout/fragment_article.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.ArticleFragment">
+    tools:context=".Fragments.ArticleFragment"
+    >
 
     <!-- TODO: Update blank fragment layout -->
 
