--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,7 @@
 
         <Button
             style="@style/Widget.AppCompat.Button.Borderless"
+            android:id="@+id/home_Button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
@@ -75,6 +76,7 @@
             android:background="@drawable/ic_home_black_24dp" />
         <Button
             android:layout_weight="1"
+            android:id="@+id/write_Button"
             android:layout_width="0dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
@@ -86,6 +88,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_weight="1"
             android:layout_width="0dp"
+            android:id="@+id/about_Button"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_height="wrap_content"
@@ -95,6 +98,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_weight="1"
             android:layout_width="0dp"
+            android:id="@+id/profile_Button"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_height="wrap_content"
