--- a/app/src/main/res/layout/article_item.xml
+++ b/app/src/main/res/layout/article_item.xml
@@ -1,98 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/article_shape"
-    android:padding="30dp"
-    android:layout_margin="50dp"
+    android:layout_marginTop="15dp"
+    android:layout_marginRight="30dp"
+    android:layout_marginLeft="30dp"
+    android:layout_marginBottom="15dp"
+    android:background="#F3F0F0"
+    android:orientation="vertical"
     >
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
         >
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@mipmap/ic_launcher"
             android:id="@+id/user_img"
             android:layout_alignParentEnd="true"
+            android:layout_marginBottom="10dp"
             android:layout_alignParentRight="true"
             />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="اسم المستخدم"
-                android:layout_toLeftOf="@id/user_img"
-                android:layout_marginRight="20dp"
-                android:textColor="#000"
-                android:textStyle="bold"
-                android:id="@+id/userName_TextView"
-                android:textSize="15dp"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="اسم المستخدم"
+            android:layout_toLeftOf="@id/user_img"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="15dp"
+            android:textColor="#000"
+            android:textStyle="bold"
+            android:id="@+id/userName_TextView"
+            android:textSize="20dp"
             />
 
     </RelativeLayout>
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+
+    android:backgroundTint="@color/white"
+    android:background="@drawable/edittext_shape"
+    >
+
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColorHint="#000"
         android:textColor="#000"
         android:id="@+id/title_TextText"
-        android:background="@drawable/edittext_shape"
+        android:padding="10dp"
+        android:textSize="40dp"
+        android:textStyle="bold"
         />
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         android:layout_gravity="center"
         android:id="@+id/img"
+        android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher"
         />
 
     <TextView
-        android:background="@drawable/edittext_shape"
         android:id="@+id/article_TextText"
         android:layout_width="match_parent"
-        android:layout_height="258dp"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
         android:textColorHint="#000"
+        android:textColor="#000"
+        android:textStyle="bold"
+        android:textSize="20dp"
         />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="3"
-        android:background="@drawable/edittext_shape"
+        android:padding="10dp"
         >
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="20dp"
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="30dp"
             android:layout_marginRight="20dp"
             android:id="@+id/like_Button"
+            android:backgroundTint="@color/gray"
             android:background="@drawable/like"
             />
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="20dp"
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="50dp"
             android:layout_marginRight="20dp"
+            android:backgroundTint="@color/gray"
             android:id="@+id/comment_Button"
             android:background="@drawable/ic_comment_black_24dp"
             />
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
+
+        <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/see_Button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="50dp"
+            android:layout_gravity="right"
             android:background="@drawable/ic_remove_red_eye_black_24dp"
-            />
+            android:backgroundTint="@color/gray"
+             />
 
     </LinearLayout>
 
 
+</LinearLayout>
 </LinearLayout>
